# analytiq

./: .env.example  .gitignore  Dockerfile.app  Dockerfile.scheduler  LICENSE  Procfile  README.md  TODOS.md  docker-compose.yml  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  ruff.toml
.claude/: launch.json
.github/workflows/: ci.yml
app/: audit_log.py  auth.py  database.py  deps.py  main.py  notifications.py  pii.py
app/connectors/: coerce.py  sync.py
app/notifications/: __init__.py  discord.py  pagerduty.py  teams.py
app/routers/: alerts.py  annotations.py  anomalies.py  api_keys.py  audit.py  auth.py  churn.py  connectors.py  copilot.py  dashboard.py  embed.py  export.py  flags.py  gdpr.py  (+17 more)
db/: 02_app_user.sh  03_migrations.sh  schema.sql
frontend/: Dockerfile.frontend  next.config.js  package-lock.json  package.json  tsconfig.tsbuildinfo
graphify-out/: .graphify_chunk_01.json  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
nginx/: default.conf
scheduler/: alert_evaluator.py  anomaly_detector.py  digest.py  main.py  metrics.py  notifications.py
scripts/: migrate.py  seed_demo.py
sdk/: SERVER_SDKS.md  analytics.js
sdk/python/: pyproject.toml
sdk/python/analytiq/: __init__.py
tests/: conftest.py  test_alerts.py  test_alerts_api.py  test_auth.py  test_coerce.py  test_connectors.py  test_dashboard.py  test_dashboard_cache.py  test_export.py  test_ingest.py  test_metrics.py  test_patch_connector.py  test_rate_limit.py  test_rls.py  test_rotate_api_key.py  test_scheduler.py  test_sync.py  test_webhook.py
(+70 files in other folders)
